Обновление версии JPrime 2023.07