@@ -6,8 +6,11 @@ subprojects {
   apply plugin: 'io.spring.dependency-management'
 
   tasks.withType(JavaCompile) {
-    sourceCompatibility = JavaVersion.VERSION_1_8
-    targetCompatibility = JavaVersion.VERSION_1_8
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
+    options.compilerArgs += ["--add-exports", "java.base/sun.security.pkcs=ALL-UNNAMED"]
+    options.compilerArgs += ["--add-exports", "java.base/sun.security.util=ALL-UNNAMED"]
+    options.compilerArgs += ["--add-exports", "java.base/sun.security.x509=ALL-UNNAMED"]
   }
 
   repositories {
